# robocob_MobileNet_SSD_OpenVINO

./: CMakeLists.txt  README.md  build_samples.sh  commit.sh
MindVisionAPI/src/: mv_init.cpp  mv_init.h
cmakelistsDemo/: CMakeLists.txt  readMe.md
inference_engine/: readMe.txt
script/: run_ssd.sh  run_ssd_all.sh
src/: main.cpp  openvino.cpp  openvino.hpp
store/: main.cpp
test/: main (copy).cpp
